--- a/descedent.html
+++ b/descedent.html
@@ -24,6 +24,8 @@
             <ul>
                 <li>unordered item</li>
                 <li>unordered item</li>
+                <li>git added item</li>
+                <li>git added item post git add </li>
             </ul>
             <li>Third item</li>
         </ol>
