--- a/Hello.html
+++ b/Hello.html
@@ -2,6 +2,6 @@
 <html lang = "eng">
     <title>Hello</title>
         <body>
-            Hello World! Edit on github
+            Hello World! Edit on local
         </body> 
 </html>
