--- a/Hello.html
+++ b/Hello.html
@@ -2,7 +2,6 @@
 <html lang = "eng">
     <title>Hello</title>
         <body>
-hello world , merged conflict
-this is a branch surya!
+hello world , merged conflict!!
         </body> 
 </html>
