--- a/Hello.html
+++ b/Hello.html
@@ -2,6 +2,6 @@
 <html lang = "eng">
     <title>Hello</title>
         <body>
-hello world , merged conflict!!
+hello world , merged conflict!!!
         </body> 
 </html>
